cinder (2013.1.1-2) unstable; urgency=low

  * Added if [ -r /usr/share/dbconfig-common/dpkg/prerm ] in the prerm.
  * Ran wrap-and-sort to clean stuff.

 -- Thomas Goirand <zigo@debian.org>  Thu, 23 May 2013 00:08:47 +0800

cinder (2013.1.1-1) unstable; urgency=low

  * Uploading to unstable.
  * New upstream release.
  * Fixed /etc/sudoers.d/cinder-common
  * Reviewed package descriptions by the debian-l10n-english team.

 -- Thomas Goirand <zigo@debian.org>  Thu, 11 Apr 2013 22:30:47 +0800

cinder (2013.1-1) experimental; urgency=low

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Mon, 28 Jan 2013 15:54:59 +0800

cinder (2012.2.1-1) experimental; urgency=low

  [ Thomas Goirand ]
  * New upstream release 2012.2.1
  * Fixes wrong handling (eg: policy violation) of /etc/cinder/cinder.conf.
  * Now uses pkgos_func functions for debconf and dbconfig-common handling.
  * Renames /etc/sudoers.d/cinder_sudoers as /etc/sudoers.d/cinder-common.
  * Debconf now users cinder/<debconf-screen-name> and not cinder-common/.
  * Reviewed long and short descriptions in debian/control.
  * Bumped Build-Depends-Indep: python-all to 2.6.6-3~ since we are using
  dh_python2.
  * Added everyone in the team as Uploaders:.
  * Changed Homepage field to http://cinder.openstack.org/.
  * Dependencies are now by alpha order.
  * Removed useless empty cinder-volume.postrm, cinder-api.postrm,
  cinder-scheduler.postinst, cinder-scheduler.postrm.
  * Pre-Depends: dpkg (>= 1.15.6~) because we use xz compression.
  * Asks for admin tenant, user and password with debconf, patches
  api-paste.ini so it is syntaxicaly correct.
  * Auto-detects a valide volume group name, and prompt the user with debconf
  about it.

 -- Thomas Goirand <zigo@debian.org>  Sun, 02 Dec 2012 07:00:49 +0000

cinder (2012.2~rc1+git1~6b31057-1) experimental; urgency=low

  * First debian release

 -- Mehdi Abaakouk <sileht@sileht.net>  Thu, 13 Sep 2012 15:52:06 +0200
